// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadSidebars sidebars link 1`] = `
Object {
  "docs": Array [
    Object {
      "items": Array [
        Object {
          "href": "https://github.com",
          "label": "category",
          "type": "link",
        },
      ],
      "label": "Test",
      "type": "category",
    },
  ],
}
`;

exports[`loadSidebars sidebars with category.collapsed property 1`] = `
Object {
  "docs": Array [
    Object {
      "collapsed": true,
      "items": Array [
        Object {
          "collapsed": false,
          "items": Array [
            Object {
              "id": "doc1",
              "type": "doc",
            },
          ],
          "label": "Introduction",
          "type": "category",
        },
      ],
      "label": "Test",
      "type": "category",
    },
    Object {
      "collapsed": true,
      "items": Array [
        Object {
          "collapsed": false,
          "items": Array [
            Object {
              "id": "doc2",
              "type": "doc",
            },
          ],
          "label": "Powering MDX",
          "type": "category",
        },
      ],
      "label": "Reference",
      "type": "category",
    },
  ],
}
`;

exports[`loadSidebars sidebars with deep level of category 1`] = `
Object {
  "docs": Array [
    Object {
      "items": Array [
        Object {
          "id": "a",
          "type": "doc",
        },
        Object {
          "items": Array [
            Object {
              "items": Array [
                Object {
                  "id": "c",
                  "type": "doc",
                },
                Object {
                  "items": Array [
                    Object {
                      "id": "d",
                      "type": "doc",
                    },
                    Object {
                      "items": Array [
                        Object {
                          "id": "e",
                          "type": "doc",
                        },
                      ],
                      "label": "deeper more more",
                      "type": "category",
                    },
                  ],
                  "label": "level 4",
                  "type": "category",
                },
              ],
              "label": "level 3",
              "type": "category",
            },
            Object {
              "id": "f",
              "type": "doc",
            },
          ],
          "label": "level 2",
          "type": "category",
        },
      ],
      "label": "level 1",
      "type": "category",
    },
  ],
}
`;

exports[`loadSidebars sidebars with first level not a category 1`] = `
Object {
  "docs": Array [
    Object {
      "items": Array [
        Object {
          "id": "greeting",
          "type": "doc",
        },
      ],
      "label": "Getting Started",
      "type": "category",
    },
    Object {
      "id": "api",
      "type": "doc",
    },
  ],
}
`;

exports[`loadSidebars sidebars with known sidebar item type 1`] = `
Object {
  "docs": Array [
    Object {
      "items": Array [
        Object {
          "id": "foo/bar",
          "type": "doc",
        },
        Object {
          "id": "foo/baz",
          "type": "doc",
        },
        Object {
          "href": "https://github.com",
          "label": "Github",
          "type": "link",
        },
        Object {
          "id": "hello",
          "type": "ref",
        },
      ],
      "label": "Test",
      "type": "category",
    },
    Object {
      "items": Array [
        Object {
          "id": "hello",
          "type": "doc",
        },
      ],
      "label": "Guides",
      "type": "category",
    },
  ],
}
`;
